--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
   argocd_deploy:
+    if: ${{ always() }}
     needs: build_and_push
     uses: ./.github/workflows/argo-update.yml
     secrets:
