--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,5 @@
-name: Build & Push All Services
+# .github/workflows/docker-build.yml
+name: Docker Build & Push
 
 on:
   workflow_call:
@@ -6,60 +7,57 @@ on:
       image_version:
         required: true
         type: string
-      service:             
+      service:
         required: true
         type: string
     secrets:
+      DOCKER_USERNAME:
+        required: true
       DOCKER_PASSWORD:
         required: true
 
-
 jobs:
-  build-and-push:
+  docker_build:
     runs-on: ubuntu-latest
-
     env:
-      DOCKER_NAMESPACE: pathfindersh
-      BASE_PATH: ./hipster/src
+      IMAGE_NAME: pathfindersh/hipster-app
+      IMAGE_VERSION: ${{ inputs.image_version }}
+      SERVICE: ${{ inputs.service }}
 
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: pathfindersh
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build & Push all services
+      - name: Check if image already exists on Docker Hub
+        id: check
         run: |
-          for service in $(ls $BASE_PATH); do
-            echo "🔧 Building $service"
-            if [ "$service" = "cartservice" ]; then
-              DOCKERFILE="$BASE_PATH/$service/src/Dockerfile"
-              CONTEXT="$BASE_PATH/$service/src"
-            else
-              DOCKERFILE="$BASE_PATH/$service/Dockerfile"
-              CONTEXT="$BASE_PATH/$service"
-            fi
+          IMAGE_TAG=${IMAGE_NAME}:${SERVICE}-${IMAGE_VERSION}
+          STATUS=$(curl -s -o /dev/null -w "%{http_code}" \
+            https://hub.docker.com/v2/repositories/${IMAGE_NAME}/tags/${SERVICE}-${IMAGE_VERSION})
 
-            IMAGE_TAG="${DOCKER_NAMESPACE}/hipster-app:${service}-${{ inputs.image_version }}"
-            echo "🏗️ Building $IMAGE_TAG from $DOCKERFILE"
-            docker build -t $IMAGE_TAG -f $DOCKERFILE $CONTEXT
-            echo "📤 Pushing $IMAGE_TAG"
-            docker push $IMAGE_TAG
-          done
+          echo "Image status code: $STATUS"
+          if [ "$STATUS" -eq 200 ]; then
+            echo "exists=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "exists=false" >> "$GITHUB_OUTPUT"
+          fi
 
-      - name: Create metadata.json artifact
+      - name: Build & Push Docker Image
+        if: steps.check.outputs.exists == 'false'
         run: |
-          echo '{ "service": "${{ inputs.service }}", "image_tag": "${{ inputs.image_version }}" }' > metadata.json
+          IMAGE_TAG=${IMAGE_NAME}:${SERVICE}-${IMAGE_VERSION}
+          DOCKERFILE=hipster/${SERVICE}/Dockerfile
+          CONTEXT=hipster/${SERVICE}
 
-      - name: Upload deployment metadata
-        uses: actions/upload-artifact@v4
-        with:
-          name: deployment-metadata
-          path: metadata.json
+          echo "🏗️ Building $IMAGE_TAG"
+          docker build -t $IMAGE_TAG -f $DOCKERFILE $CONTEXT
+
+          echo "🚀 Pushing $IMAGE_TAG"
+          docker push $IMAGE_TAG
+
+      - name: Skip Notice
+        if: steps.check.outputs.exists == 'true'
+        run: echo "✅ Docker image already exists — skipping build and push."
