--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,63 +1,62 @@
-# .github/workflows/docker-build.yml
-name: Docker Build & Push
+name: Build & Push All Services
 
 on:
-  workflow_call:
+  workflow_dispatch:
     inputs:
-      image_version:
-        required: true
-        type: string
-      service:
-        required: true
-        type: string
-    secrets:
-      DOCKER_USERNAME:
-        required: true
-      DOCKER_PASSWORD:
+      IMAGE_VERSION:
+        description: 'Image version (e.g. v0.8.0)'
         required: true
 
 jobs:
-  docker_build:
+  build-and-push:
     runs-on: ubuntu-latest
+
     env:
-      IMAGE_NAME: pathfindersh/hipster-app
-      IMAGE_VERSION: ${{ inputs.image_version }}
-      SERVICE: ${{ inputs.service }}
+      DOCKER_NAMESPACE: pathfindersh
+      BASE_PATH: ./hipster/src
+      IMAGE_VERSION: ${{ github.event.inputs.IMAGE_VERSION }}
 
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        uses: docker/login-action@v3
+        with:
+          username: pathfindersh
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Check if image already exists on Docker Hub
-        id: check
+      - name: Build & Push all services (with skip if exists)
         run: |
-          IMAGE_TAG=${IMAGE_NAME}:${SERVICE}-${IMAGE_VERSION}
-          STATUS=$(curl -s -o /dev/null -w "%{http_code}" \
-            https://hub.docker.com/v2/repositories/${IMAGE_NAME}/tags/${SERVICE}-${IMAGE_VERSION})
+          for service in $(ls $BASE_PATH); do
+            echo "🔧 Processing $service"
 
-          echo "Image status code: $STATUS"
-          if [ "$STATUS" -eq 200 ]; then
-            echo "exists=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "exists=false" >> "$GITHUB_OUTPUT"
-          fi
+            IMAGE_TAG="${DOCKER_NAMESPACE}/hipster-app:${service}-${IMAGE_VERSION}"
 
-      - name: Build & Push Docker Image
-        if: steps.check.outputs.exists == 'false'
-        run: |
-          IMAGE_TAG=${IMAGE_NAME}:${SERVICE}-${IMAGE_VERSION}
-          DOCKERFILE=hipster/${SERVICE}/Dockerfile
-          CONTEXT=hipster/${SERVICE}
+            # Check if image already exists on Docker Hub
+            STATUS=$(curl -s -o /dev/null -w "%{http_code}" \
+              https://hub.docker.com/v2/repositories/${DOCKER_NAMESPACE}/hipster-app/tags/${service}-${IMAGE_VERSION})
 
-          echo "🏗️ Building $IMAGE_TAG"
-          docker build -t $IMAGE_TAG -f $DOCKERFILE $CONTEXT
+            if [ "$STATUS" -eq 200 ]; then
+              echo "✅ Image $IMAGE_TAG already exists. Skipping build & push."
+              continue
+            fi
 
-          echo "🚀 Pushing $IMAGE_TAG"
-          docker push $IMAGE_TAG
+            # Determine Dockerfile and context
+            if [ "$service" = "cartservice" ]; then
+              DOCKERFILE="$BASE_PATH/$service/src/Dockerfile"
+              CONTEXT="$BASE_PATH/$service/src"
+            else
+              DOCKERFILE="$BASE_PATH/$service/Dockerfile"
+              CONTEXT="$BASE_PATH/$service"
+            fi
 
-      - name: Skip Notice
-        if: steps.check.outputs.exists == 'true'
-        run: echo "✅ Docker image already exists — skipping build and push."
+            echo "🏗️ Building $IMAGE_TAG using $DOCKERFILE"
+            docker build -t $IMAGE_TAG -f $DOCKERFILE $CONTEXT
+
+            echo "📤 Pushing $IMAGE_TAG"
+            docker push $IMAGE_TAG
+          done
