--- a/.github/workflows/argo-update.yml
+++ b/.github/workflows/argo-update.yml
@@ -35,7 +35,13 @@ jobs:
             exit 1
           fi
           echo "🔄 Updating $file for $SERVICE..."
-          sed -i "s|\(.*${SERVICE}.*tag:\).*|\1 \"${IMAGE_TAG}\"|" "$file"
+
+          awk -v service="${SERVICE}" -v new_tag="${IMAGE_TAG}" '
+            $0 ~ service ":" { in_service=1 }
+            in_service && $0 ~ /tag:/ { sub(/tag:.*/, "tag: \"" new_tag "\""); in_service=0 }
+            { print }
+          ' "$file" > tmp.yaml && mv tmp.yaml "$file"
+
           echo "✅ Updated image tag for $SERVICE to $IMAGE_TAG"
 
       - name: Commit and Push Changes
@@ -43,6 +49,6 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
-          git add .
+          git add hipster/helm-chart/values.yaml
           git commit -m "✅ Update $SERVICE to $IMAGE_TAG" || echo "Nothing to commit"
           git push origin HEAD:main
