--- a/hipster/helm-chart/templates/cartservice.yaml
+++ b/hipster/helm-chart/templates/cartservice.yaml
@@ -75,7 +75,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: {{ .Values.cartService.image.repository }}:{{ .Values.cartService.image.tag }}
+        image: {{ .Values.images.repository }}:{{ .Values.cartService.name }}-{{ .Values.images.tag | default .Chart.AppVersion }}
         ports:
         - containerPort: 7070
         env:
