--- a/hipster/helm-chart/templates/checkoutservice.yaml
+++ b/hipster/helm-chart/templates/checkoutservice.yaml
@@ -70,7 +70,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: {{ .Values.checkoutService.image.repository }}:{{ .Values.checkoutService.image.tag }}
+        image: {{ .Values.images.repository }}:{{ .Values.checkoutService.name }}-{{ .Values.images.tag | default .Chart.AppVersion }}
         ports:
         - containerPort: 5050
         readinessProbe:
