--- a/hipster/helm-chart/templates/frontend.yaml
+++ b/hipster/helm-chart/templates/frontend.yaml
@@ -72,7 +72,7 @@ spec:
                 - ALL
             privileged: false
             readOnlyRootFilesystem: true
-          image: {{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}
+          image: {{ .Values.images.repository }}:{{ .Values.frontend.name }}-{{ .Values.images.tag | default .Chart.AppVersion }}
           ports:
           - containerPort: 8080
           readinessProbe:
