--- a/hipster/helm-chart/templates/paymentservice.yaml
+++ b/hipster/helm-chart/templates/paymentservice.yaml
@@ -71,7 +71,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: {{ .Values.paymentService.image.repository }}:{{ .Values.paymentService.image.tag }}
+        image: {{ .Values.images.repository }}:{{ .Values.paymentService.name }}-{{ .Values.images.tag | default .Chart.AppVersion }}
         ports:
         - containerPort: 50051
         env:
