--- a/hipster/helm-chart/templates/adservice.yaml
+++ b/hipster/helm-chart/templates/adservice.yaml
@@ -71,7 +71,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: {{ .Values.adService.image.repository }}:{{ .Values.adService.image.tag }}
+        image: {{ .Values.images.repository }}:{{ .Values.adService.name }}-{{ .Values.images.tag | default .Chart.AppVersion }}
         ports:
         - containerPort: 9555
         env:
@@ -80,17 +80,13 @@ spec:
         resources:
           {{- toYaml .Values.adService.resources | nindent 10 }}
         readinessProbe:
-          initialDelaySeconds: 30
-          periodSeconds: 10
-          timeoutSeconds: 3
-          failureThreshold: 10
+          initialDelaySeconds: 20
+          periodSeconds: 15
           grpc:
             port: 9555
         livenessProbe:
-          initialDelaySeconds: 60
+          initialDelaySeconds: 20
           periodSeconds: 15
-          timeoutSeconds: 3
-          failureThreshold: 10
           grpc:
             port: 9555
 ---
