--- a/hipster/helm-chart/templates/shippingservice.yaml
+++ b/hipster/helm-chart/templates/shippingservice.yaml
@@ -70,7 +70,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: {{ .Values.shippingService.image.repository }}:{{ .Values.shippingService.image.tag }}
+        image: {{ .Values.images.repository }}:{{ .Values.shippingService.name }}-{{ .Values.images.tag | default .Chart.AppVersion }}
         ports:
         - containerPort: 50051
         env:
