final commit of v0.8.1

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
   argocd_deploy:
-    #if: ${{ always() }}
+    if: ${{ always() }}
     needs: build_and_push
     uses: ./.github/workflows/argo-update.yml
     with:
