--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -33,6 +33,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: buildx-${{ runner.os }}-${{ github.sha }}
+          restore-keys: |
+            buildx-${{ runner.os }}-
+
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -65,7 +74,14 @@ jobs:
             fi
 
             echo "🏗️ Building $IMAGE_TAG using $DOCKERFILE"
-            docker build -t $IMAGE_TAG -f $DOCKERFILE $CONTEXT
+            docker buildx build \
+              --cache-from=type=local,src=/tmp/.buildx-cache \
+              --cache-to=type=local,dest=/tmp/.buildx-cache \
+              --tag $IMAGE_TAG \
+              --file $DOCKERFILE \
+              $CONTEXT \
+              --push
+
 
             echo "📤 Pushing $IMAGE_TAG"
             docker push $IMAGE_TAG
