--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,24 +22,27 @@ jobs:
     with:
       service: ${{ github.event.inputs.service }}
 
-  build_and_push:
-    if: ${{always()}}
-    needs: unit_tests
-    uses: ./.github/workflows/docker-build.yml
-    with:
-      image_version: ${{ github.event.inputs.image_version }}
-      service: ${{ github.event.inputs.service }}
-    secrets:
-      DOCKER_USERNAME: pathfindersh
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  # build_and_push:
+  #   if: ${{always()}}
+  #   needs: unit_tests
+  #   uses: ./.github/workflows/docker-build.yml
+  #   with:
+  #     image_version: ${{ github.event.inputs.image_version }}
+  #     service: ${{ github.event.inputs.service }}
+  #   secrets:
+  #     DOCKER_USERNAME: pathfindersh
+  #     DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
   trivy_scan:
     if: ${{ always() }}
-    needs: build_and_push
+    needs: unit_tests
     uses: ./.github/workflows/trivy.yml
     with:
       service: ${{ github.event.inputs.service }}
       image_version: ${{ github.event.inputs.image_version }}
+    secrets:
+    DOCKER_USERNAME: pathfindersh
+    DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
 
   argocd_deploy:
