--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -21,7 +21,10 @@ jobs:
         run: echo "IMAGE=pathfindersh/hipster-app:${{ inputs.service }}-${{ inputs.image_version }}" >> $GITHUB_ENV
        
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "pathfindersh" --password-stdin
+        uses: docker/login-action@v3
+        with:
+          username: pathfindersh
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Install Trivy
         uses: aquasecurity/trivy-action@master
