--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -9,6 +9,11 @@ on:
       image_version:
         required: true
         type: string
+    secrets:
+      DOCKER_USERNAME:
+        required: true
+      DOCKER_PASSWORD:
+        required: true
 
 jobs:
   trivy-scan:
