--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -3,9 +3,6 @@ name: Trivy Image Vulnerability Scan
 on:
   workflow_call:
     inputs:
-      service:
-        required: true
-        type: string
       image_version:
         required: true
         type: string
@@ -17,35 +14,47 @@ on:
 
 jobs:
   trivy-scan:
-    name: Run Trivy Scan
+    strategy:
+      matrix:
+        service:
+          - adservice
+          - cartservice
+          - checkoutservice
+          - currencyservice
+          - emailservice
+          - frontend
+          - loadgenerator
+          - paymentservice
+          - productcatalogservice
+          - recommendationservice
+          - shippingservice
+
     runs-on: ubuntu-latest
+    env:
+      IMAGE: pathfindersh/hipster-app:${{ matrix.service }}-${{ inputs.image_version }}
 
     steps:
-      - name: Set image name
-        id: image
-        run: echo "IMAGE=pathfindersh/hipster-app:${{ inputs.service }}-${{ inputs.image_version }}" >> $GITHUB_ENV
-       
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: pathfindersh
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Install Trivy
+      - name: Run Trivy Scan (table)
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: image
           image-ref: ${{ env.IMAGE }}
           format: table
-          exit-code: 0  # So the pipeline doesn't fail on vuln findings (optional)
+          exit-code: 0
           ignore-unfixed: true
 
-      - name: Save Trivy report
+      - name: Save Trivy JSON Report
         run: |
-          trivy image --format json --output trivy-${{ inputs.service }}.json $IMAGE
+          trivy image --format json --output trivy-${{ matrix.service }}.json $IMAGE
 
       - name: Upload Trivy report
         uses: actions/upload-artifact@v4
         with:
-          name: trivy-${{ inputs.service }}
-          path: trivy-${{ inputs.service }}.json
+          name: trivy-${{ matrix.service }}
+          path: trivy-${{ matrix.service }}.json
