--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,12 @@ on:
         required: true
 
 jobs:
+
+  gitleaks_scan:
+  uses: ./.github/workflows/gitleaks.yml
+
   polaris_scan:
+    needs: gitleaks_scan
     uses: ./.github/workflows/polaris.yml
     secrets:
       gh_pat: ${{ secrets.GH_PAT }}
