--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
 
   gitleaks_scan:
     uses: ./.github/workflows/gitleaks.yml
+    secrets:
+      gh_pat: ${{ secrets.GH_PAT }}
   
   polaris_scan:
     needs: gitleaks_scan
