--- a/.github/workflows/gitleaks.yml
+++ b/.github/workflows/gitleaks.yml
@@ -19,12 +19,28 @@ jobs:
         with:
           token: ${{ secrets.gh_pat }}
 
-      - name: Run Gitleaks Scan
-        uses: zricethezav/gitleaks-action@v2
-        with:
-          args: detect --source . --no-git --report-format json --report-path gitleaks-report.json
+      - name: Download Gitleaks Binary
+        run: |
+          curl -sSL https://github.com/gitleaks/gitleaks/releases/latest/download/gitleaks-linux-amd64 -o gitleaks
+          chmod +x gitleaks
+          sudo mv gitleaks /usr/local/bin/
+
+      - name: Run Gitleaks (fail if secrets found)
+        run: |
+          gitleaks detect \
+            --source . \
+            --report-format json \
+            --report-path gitleaks-report.json \
+            --no-git
+
+      - name: Print Gitleaks Findings
+        if: always()
+        run: |
+          echo "📄 Gitleaks Report Contents:"
+          cat gitleaks-report.json || echo "⚠️ Report file not found"
 
       - name: Upload Gitleaks Report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: gitleaks-report
