--- a/hipster/helm-chart/templates/hpa.yaml
+++ b/hipster/helm-chart/templates/hpa.yaml
@@ -1,38 +1,38 @@
-{{- range $serviceName, $svc := .Values }}
-  {{- if and (hasKey $svc "resources") (hasKey $svc "hpa") (eq (default false $svc.hpa.enabled) true) }}
----
+{{- $services := dict
+    "adService" .Values.adService
+    "cartService" .Values.cartService
+    "checkoutService" .Values.checkoutService
+    "currencyService" .Values.currencyService
+    "emailService" .Values.emailService
+    "frontend" .Values.frontend
+    "loadGenerator" .Values.loadGenerator
+    "paymentService" .Values.paymentService
+    "productCatalogService" .Values.productCatalogService
+    "recommendationService" .Values.recommendationService
+    "shippingService" .Values.shippingService
+-}}
+
+{{- range $name, $svc := $services }}
+{{- if and $svc.create $svc.hpa.enabled }}
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ $svc.name }}
-  labels:
-    app: {{ $svc.name }}
+  namespace: {{ $.Release.Namespace }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: {{ $svc.name }}
-  minReplicas: {{ $svc.hpa.minReplicas | default 1 }}
-  maxReplicas: {{ $svc.hpa.maxReplicas | default 3 }}
+  minReplicas: {{ $svc.hpa.minReplicas }}
+  maxReplicas: {{ $svc.hpa.maxReplicas }}
   metrics:
     - type: Resource
       resource:
         name: cpu
         target:
           type: Utilization
-          averageUtilization: {{ $svc.hpa.targetCPUUtilizationPercentage | default 80 }}
-  behavior:
-    scaleUp:
-      stabilizationWindowSeconds: 30
-      policies:
-        - type: Percent
-          value: 100
-          periodSeconds: 15
-    scaleDown:
-      stabilizationWindowSeconds: 60
-      policies:
-        - type: Percent
-          value: 50
-          periodSeconds: 30
-  {{- end }}
+          averageUtilization: {{ $svc.hpa.cpu.targetAverageUtilization }}
+---
+{{- end }}
 {{- end }}
